objects/Service_Line_Matrix__c.object
<CustomObject>
    <description>VOLO
--
Service Line matrix used by quote process in order to identify matching support and professional support part number</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>text(Product_Class__r.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Percent__c</fullName>
        <defaultValue>0.51</defaultValue>
        <label>Cost %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Line_Total_Product_Line__c</fullName>
        <label>Percent of Line Total/ Product Line</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Service Lines Matrix</relationshipLabel>
        <relationshipName>Service_Lines_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>TEXT( Product_Class__r.Product_Line__c )</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Professional Service Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Product_Group__c</field>
                <operation>startsWith</operation>
                <value>Professional Services</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Lines Matrix (Professional Service Product)</relationshipLabel>
        <relationshipName>Service_Lines_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Part_Number__c</fullName>
        <formula>Professional_Service_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professional Services Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Part_Number__c</fullName>
        <formula>Support_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Salesforce_Product_Type__c</field>
                <operation>equals</operation>
                <value>Support</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Lines Matrix</relationshipLabel>
        <relationshipName>Service_Lines_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <label>Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care</fullName>
                </value>
                <value>
                    <fullName>Care Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Line Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Class__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Professional_Services_Part_Number__c</columns>
        <columns>Professional_Service_Product__c</columns>
        <columns>Support_Part_Number__c</columns>
        <columns>Support_Product__c</columns>
        <columns>Support_Type__c</columns>
        <columns>Percent_of_Line_Total_Product_Line__c</columns>
        <columns>Cost_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>NA_Sales_Operations_VP</role>
            <role>Sales_Proposal_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SERV-{000000}</displayFormat>
        <label>Service Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Lines Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>